# WinUpdate

./: .gitignore  CMakeLists.txt  Changelog.html  Changelog_no.html  Changelog_se.html  LICENSE.txt  README.md  change_log.txt  loaded_log_debug.txt  log_debug.txt  main.cpp  makeit.bat  progress_raw_debug.txt  progress_test_log.txt  rtf_debug.txt  shini.bat  winget_helper.cpp  wup_globals.h  wup_run_log.txt  wup_settings.txt  wup_winget_list_fallback.txt  wup_winget_raw.txt  wup_winget_raw_fallback.txt
WinProgramManager/: .gitignore  CMakeLists.txt  Changelog.html  Changelog_no.html  Changelog_se.html  GPLv2.md  WinProgramUpdater.cpp  WinProgramUpdater.h  about.cpp  about.h  add_raw_tags.ps1  app_details.cpp  app_details.h  bouncing_ball.cpp  bouncing_ball.h  build_complete_db.ps1  build_everything.ps1  build_winget_db.ps1  correlate_categories.ps1  infer_categories.ps1  ini_utils.cpp  ini_utils.h  install_dialog.cpp  install_dialog.h  installed_apps.cpp  installed_apps.h  keyboard_shortcuts.cpp  keyboard_shortcuts.h  main.cpp  makeit.bat  process_utils.cpp  process_utils.h  quit_handler.cpp  quit_handler.h  resource.h  restore_ignored_tags.ps1  restore_ignored_tags_fixed.ps1  restore_missing_packages.ps1  settings_dialog.cpp  settings_dialog.h  (+11 more)
WinProgramManager/locale/: en_GB.txt  nb_NO.txt  sv_SE.txt
WinProgramManager/scripts/: add_missing_installed_packages.ps1  check_deleted_packages.ps1
WinUpdate/: .gitignore  Changelog.html  Changelog_no.html  Changelog_se.html  DEFENDER_SOLUTIONS.md  LICENSE.md  README.md  analyze_tags.ps1  convert_changelog_to_odt.py  convert_logo_to_png.py  convert_to_pdf.py  create_manual.py  data_arrival_debug.txt  detect.bat  fix_logo_bg.py  header_test.cpp  helper_debug.txt  main.cpp  main.cpp.bak  makeit.bat  pipe_debug.txt  post_skip.cpp  resource.h  run.bat  show_window.ps1  show_window2.ps1  tag_analysis_results.json  temp_app_sample.txt  temp_convert.html  translate_manuals.py  winget_helper.cpp  winget_list_json.txt  winupdate.rc
WinUpdate/locale/: en.ini  nb_NO.txt  sv_SE.ini
WinUpdate/scripts/: add_defender_exclusion.ps1  add_mingw_to_user_path.bat  backup_and_prune.ps1  fix_conflicts.ps1  iter_probe_run.ps1  post_skip.ps1  run3s_and_kill.ps1  send_wm_copydata.ps1  submit_false_positive.ps1
WinUpdate/src/: About.cpp  About.cpp.bak20260106_131135  About.h  Config.cpp  Config.h  ctrlw.cpp  ctrlw.h  exclude_confirm_dialog.cpp  globals.cpp  hidden_scan.cpp  hidden_scan.h  install_dialog.cpp  install_dialog.h  logging.h  main.cpp.dead  parsing.cpp  parsing.h  scan_runner.h  skip_confirm_dialog.cpp  skip_confirm_dialog.h  skip_update.cpp  skip_update.h  startup_manager.cpp  startup_manager.h  system_tray.cpp  system_tray.h  unexclude_dialog.cpp  unskip.cpp  view_log_dialog.cpp  view_log_dialog.h  winget_versions.cpp
backups/20251220_095954/: meta.txt
backups/20251220_100426/: main.cpp  meta.txt
backups/20251220_101639/: meta.txt
backups/20251221_141834/: main.cpp  meta.txt  parsing.cpp  parsing.h  winget_versions.cpp
backups/20251221_154624/: CMakeLists.txt  main.cpp  meta.txt  scan_runner.cpp  scan_runner.h
i18n/: en.txt  en_GB.txt  nb_NO.ini  nb_NO.txt  no.txt
locale/: en.txt  en_GB.ini  en_GB.txt  nb_NO.ini  nb_NO.txt  no.txt  sv_SE.txt
logs/: parse_debug.txt  run_commands.txt  wup_ui_setitems_verbose.txt  wup_winget_avail_map.txt  wup_winget_inst_map.txt  wup_winget_raw.txt
scripts/: register_appinstaller.ps1  run_three_runs.ps1
snapshots/: wip-before-rollback.bundle
src/: About.cpp  Config.cpp  Config.h  exclude.cpp  exclude.h  exclude_confirm_dialog.cpp  exclude_confirm_dialog.h  hyperlink.cpp  hyperlink.h  install_dialog.cpp  logging.cpp  main.cpp  parsing.cpp  scan_runner.cpp  skip_confirm_dialog.cpp  skip_update.cpp  skip_update.h  startup_manager.cpp  startup_manager.h  system_tray.cpp  system_tray.h  unexclude_dialog.cpp  unexclude_dialog.h  unskip.cpp  unskip.h  view_log_dialog.cpp  winget_errors.h  winget_versions.cpp  winget_versions.h
tools/: winget_print.cpp
